--- a/source/client/willi/app/build.gradle
+++ b/source/client/willi/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     implementation files('libs/jackson-annotations-2.6.0.jar')
     implementation files('libs/jackson-core-2.6.1.jar')
     implementation files('libs/jackson-databind-2.6.1.jar')
+    implementation 'com.android.support:design:28.0.0'
 
 }
