[test] Implement Codec related stuffs to achieve QA(modifiability)

--- a/test/client/LGVoIPDemoAlt1/app/CMakeLists.txt
+++ b/test/client/LGVoIPDemoAlt1/app/CMakeLists.txt
@@ -15,23 +15,22 @@ include_directories(src/main/cpp/spandsp/spandsp)
 SET(flags "HAVE_MATH_H")
 
 add_library( # Sets the name of the library.
-             native-lib
+    native-lib
 
-             # Sets the library as a shared library.
-             SHARED
+    # Sets the library as a shared library.
+    SHARED
 
-             # Provides a relative path to your source file(s).
-             src/main/cpp/native-lib.cpp
-             src/main/cpp/spandsp/gsm0610_decode.c
-             src/main/cpp/spandsp/gsm0610_encode.c
-             src/main/cpp/spandsp/gsm0610_lpc.c
-             src/main/cpp/spandsp/gsm0610_preprocess.c
-             src/main/cpp/spandsp/gsm0610_rpe.c
-             src/main/cpp/spandsp/gsm0610_short_term.c
-             src/main/cpp/spandsp/gsm0610_long_term.c
+    # gsm wrapper
+    src/main/cpp/gsm0610_jni.cpp
 
-
-           )
+    src/main/cpp/spandsp/gsm0610_decode.c
+    src/main/cpp/spandsp/gsm0610_encode.c
+    src/main/cpp/spandsp/gsm0610_lpc.c
+    src/main/cpp/spandsp/gsm0610_preprocess.c
+    src/main/cpp/spandsp/gsm0610_rpe.c
+    src/main/cpp/spandsp/gsm0610_short_term.c
+    src/main/cpp/spandsp/gsm0610_long_term.c
+    )
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
@@ -40,19 +39,19 @@ add_library( # Sets the name of the library.
 # completing its build.
 
 find_library( # Sets the name of the path variable.
-              log-lib
+    log-lib
 
-              # Specifies the name of the NDK library that
-              # you want CMake to locate.
-              log )
+    # Specifies the name of the NDK library that
+    # you want CMake to locate.
+    log )
 
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-                       native-lib
+    native-lib
 
-                       # Links the target library to the log library
-                       # included in the NDK.
-                       ${log-lib} )
+    # Links the target library to the log library
+    # included in the NDK.
+    ${log-lib} )
