[willi] add CallStateActivity.

--- a/source/client/willi/app/src/main/AndroidManifest.xml
+++ b/source/client/willi/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".UserInterface.RegisterActivity"></activity>
+        <activity android:name=".UserInterface.CallStateActivity"></activity>
     </application>
 
 </manifest>
